[package]
name = "ncp-feedback-counter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = { version = "0.12.1", features = ["with-axum"] }
askama_axum = "0.4.0"
axum = "0.7.1"
chrono = "0.4.31"
sqlx = { version = "0.7.3", features = ["runtime-tokio", "tls-rustls", "sqlite", "chrono"] }
tokio = { version = "1.34.0", features = ["full"] }

